# arduino-component-knowledge-base

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  compose.production.yaml  compose.vm-validation.yaml  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: quality.yml
deploy/reverse-proxy/: Dockerfile  default.conf  internal-https.conf.template
docs/: ARCHITECTURE.md  DATA_LICENSING.md  DATA_MODEL.md  DEPLOYMENT.md  IMPORT_VALIDATION.md  MULTIPLE_IMAGES_STAGE_1_AUDIT.md  REQUIREMENTS.md  SECURITY.md  TESTING.md  THREAT_MODEL.md  XRAY_AUDIT_0.21.0.md
docs/imports/: ROADMAP.md  card-composition.md  current-state.md  extracted-facts.md  identity-resolution.md  kicad-enrichment.md  kicad-matcher.md  normalization.md  orchestration-shadow.md  persistence.md  quality-evaluation.md  review-workspace.md  seeed-extractor.md  target-architecture.md
docs/screenshots/: README.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.node.json  vite.config.ts
frontend/deploy/: default.conf
frontend/e2e/: authentication.spec.ts  product-ui.spec.ts  repository-import.spec.ts
frontend/public/: manifest.webmanifest  theme-init.js
frontend/scripts/: dist-smoke.mjs
frontend/src/: main.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  contracts.ts
frontend/src/app/: App.tsx  query-client.ts  routes.test.tsx  routes.tsx
frontend/src/auth/: queries.ts
frontend/src/catalog/: queries.ts
frontend/src/components/: AppFooter.tsx  AppHeader.tsx  AsyncStates.test.tsx  AsyncStates.tsx  BrandMark.tsx  BrandSplat.test.tsx  BrandSplat.tsx  BuildInfo.tsx  ComponentCard.tsx  ComponentImagesEditor.test.tsx  ComponentImagesEditor.tsx  ContentPresentation.test.tsx  GraffitiAccentBlob.tsx  LearningExample.test.tsx  LearningExample.tsx  MediaGallery.tsx  OledLoginDisplay.test.tsx  OledLoginDisplay.tsx  SourceAttributionBlock.tsx  SplatEmptyState.tsx  ThemeToggle.tsx
frontend/src/config/: brand.ts
frontend/src/duplicates/: queries.ts
frontend/src/imports/: queries.ts  review-queries.ts
migrations/: env.py
migrations/versions/: 20260715_01_backend_baseline.py  20260715_02_authentication_rbac.py  20260715_03_minio_images.py  20260715_04_video_ffmpeg.py  20260715_05_durable_jobs.py  20260716_06_catalog_domain.py  20260716_07_compatibility.py  20260716_08_exact_imports.py  20260716_09_fuzzy_dedup.py  20260716_10_duplicate_review.py  20260716_11_code_examples.py  20260716_12_published_search.py  20260716_13_repository_sources.py  20260716_14_import_observability.py  20260716_15_import_quality.py  20260721_16_media_retention.py  20260723_17_import_pipeline_persistence.py  20260723_18_import_review_workspace.py  20260723_19_component_multiple_images.py
scripts/: __init__.py  auth_smoke.py  backend_smoke.py  benchmark_kicad_index.py  compose_smoke.py  dedup_smoke.py  docs_contract.py  jobs_smoke.py  linux_bootstrap.sh  media_smoke.py  parser_smoke.py  production_contract_smoke.sh  production_preflight.sh  production_smoke.py  release_contract.py  video_smoke.py
src/arduino_component_kb/: __init__.py  bootstrap.py  broker.py  config.py  db.py  logging.py  main.py  security.py  worker.py
tests/: conftest.py  import_pipeline_helpers.py  test_adapter_contract.py  test_alexgyver_adapter.py  test_arduino_tex_adapter.py  test_auth_api.py  test_auth_repository.py  test_auth_service.py  test_card_composition.py  test_catalog.py  test_config.py  test_corporate_deployment.py  test_database.py  test_deployment_contract.py  test_documentation.py  test_duplicate_review.py  test_exact_imports.py  test_extracted_facts.py  test_fuzzy_scoring.py  test_health.py  test_identity_resolution.py  test_import_pipeline_contracts.py  test_import_review_api.py  test_import_service.py  test_import_transport.py  test_import_urls.py  test_jobs.py  test_kicad_enrichment.py  test_kicad_index_distribution.py  test_kicad_matcher.py  test_logging.py  test_media_images.py  test_media_repository.py  test_media_retention.py  test_media_service.py  test_media_storage.py  test_media_videos.py  test_migrations.py  test_multiple_images_backend.py  test_passwords.py  (+17 more)
tests/integration/: test_component_multiple_images_postgresql.py  test_import_review_postgresql.py  test_minio.py  test_pipeline_shadow_postgresql.py  test_postgresql_api.py
(+192 files in other folders)
