[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arduino-component-knowledge-base"
version = "0.21.0"
description = "Backend for the Arduino Component Knowledge Base"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
license-files = ["LICENCE"]
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "dramatiq[redis]>=2.2,<3",
  "httpx2>=2.7,<3",
  "minio>=7.2.20,<8",
  "Pillow>=12.3,<13",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
ackb-bootstrap-admin = "arduino_component_kb.bootstrap:main"
ackb-provision-media = "arduino_component_kb.media.provision:main"
ackb-retain-media = "arduino_component_kb.media.retention:main"
ackb-explain-search = "arduino_component_kb.catalog.explain:main"
ackb-import-dry-run = "arduino_component_kb.imports.dry_run:main"
ackb-validate-repository-samples = "arduino_component_kb.imports.sample_validation:main"
ackb-validate-repository-jobs = "arduino_component_kb.imports.job_validation:main"
ackb-shadow-import-batch = "arduino_component_kb.imports.shadow_dry_run:main"
ackb-build-kicad-index = "arduino_component_kb.imports.pipeline.enrichment.kicad_distribution:main"

[project.optional-dependencies]
dev = [
  "bandit>=1.9,<2",
  "build>=1.2,<2",
  "hypothesis>=6.100,<7",
  "mypy>=1.11,<2",
  "pip-audit>=2.9,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/arduino-component-kb" = ["alembic.ini", "THIRD_PARTY_NOTICES.md"]
"share/arduino-component-kb/docs" = ["docs/*.md"]
"share/arduino-component-kb/migrations" = ["migrations/*.py"]
"share/arduino-component-kb/migrations/versions" = ["migrations/versions/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "integration: requires explicitly configured PostgreSQL and MinIO test services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "scripts", "tests", "migrations"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
